syntax = "proto3";

package com.tservice.proto.user;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service UserService {
  rpc create(CreateProto) returns (UserProto);
  rpc update(UpdateProto) returns (UserProto);
  rpc delete(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (UserProto);
  rpc findAll(FindAllProto) returns (stream UserProto);
  rpc findByUsername(FindByUsernameProto) returns (stream UserProto);
  rpc findByEmail(FindByEmailProto) returns (stream UserProto);
  rpc findByFirstName(FindByFirstNameProto) returns (stream UserProto);
  rpc findByLastName(FindByLastNameProto) returns (stream UserProto);
}

message UserProto {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
}

message CreateProto {
  string username = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
}

message UpdateProto {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {}

message FindByUsernameProto {
  string username = 1;
}

message FindByEmailProto {
  string email = 1;
}

message FindByFirstNameProto {
  string firstName = 1;
}

message FindByLastNameProto {
  string lastName = 1;
}